@@ -2,6 +2,7 @@ Changelog file for Login component.
 
 Login 1.7.0
 ====================================
+- [#5793] Add errTpl and errTplType properties to ForgotPassword
 - [#5823] Fix issue where postHooks did not have fields available
 - [#5797] Fix issue where &authenticate was not respected in ConfirmRegister snippet
 - [#5796] Fix issue where errors could appear twice if user used validators on username/email/password fields
